Add email cofirmation and resend route
